# ppx_module_timer

./: README.md  ppx_module_timer.opam
helpers/: dune  ppx_module_timer_helpers.ml  ppx_module_timer_helpers.mli
runtime/: dune  ppx_module_timer_runtime.ml  ppx_module_timer_runtime.mli  stubs.c  stubs.js  stubs.wat
src/: dune  ppx_module_timer.ml
test/examples/lib/: dune  lib_dependency_command.ml  lib_dependency_command.mli  lib_dependency_constant.ml  lib_dependency_constant.mli  lib_dependency_io.ml  ppx_module_timer_example_lib.ml  test_regression_pay_overhead_to_time_individual_definitions.ml
test/examples/library_with_individual_definitions/: dune  ppx_module_timer_example_lib_via_jbuild_flag.ml  ppx_module_timer_example_lib_via_jbuild_flag.mli
test/src/: dune  test_ppx_module_timer.ml
test_javascript/: dune  test_ppx_module_timer_javascript.ml
