opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/ppx_module_timer"
bug-reports: "https://github.com/janestreet/ppx_module_timer/issues"
dev-repo: "git+https://github.com/janestreet/ppx_module_timer.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/ppx_module_timer/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "base"
  "ppx_base"
  "ppxlib_jane"
  "stdio"
  "time_now"
  "dune"        {>= "3.17.0"}
  "ppxlib"      {>= "0.33.0" & < "0.36.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Ppx rewriter that records top-level module startup times"
description: "
Part of the Jane Street's PPX rewriters collection.
"
